[gd_scene load_steps=13 format=3 uid="uid://dub8iawxpu2y5"]

[ext_resource type="Texture2D" uid="uid://dtwaa4oshortk" path="res://assets/sprites/backgrounds/home/mothers_room.png" id="1_kf7b7"]
[ext_resource type="Script" path="res://assets/scripts/title.gd" id="1_q12jw"]
[ext_resource type="Texture2D" uid="uid://fo6sr2l2l1lw" path="res://assets/sprites/ui/logo.png" id="2_io5ma"]
[ext_resource type="Texture2D" uid="uid://do23iploiwhw7" path="res://assets/sprites/ui/play.png" id="3_8rjrj"]
[ext_resource type="Texture2D" uid="uid://com87c3na4nox" path="res://assets/sprites/ui/exit.png" id="4_8k0jk"]
[ext_resource type="Texture2D" uid="uid://bby22pno6vbou" path="res://assets/sprites/characters/pandora_idle.png" id="5_j0ean"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jofmq"]
atlas = ExtResource("3_8rjrj")
region = Rect2(86, 0, 86, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_xh4ga"]
atlas = ExtResource("3_8rjrj")
region = Rect2(0, 0, 86, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_8hckq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jofmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xh4ga")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_gbd3j"]
atlas = ExtResource("4_8k0jk")
region = Rect2(86, 0, 86, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3wvo"]
atlas = ExtResource("4_8k0jk")
region = Rect2(0, 0, 86, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_h383n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbd3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3wvo")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="Title" type="Control"]
layout_direction = 2
layout_mode = 3
anchor_right = 0.984
anchor_bottom = 0.996
offset_left = 6.0
offset_top = -4.0
offset_right = -1412.28
offset_bottom = -809.68
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
script = ExtResource("1_q12jw")

[node name="Room" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = 2.0
offset_right = 427.0
offset_bottom = 242.0
scale = Vector2(1.12, 1.12)
texture = ExtResource("1_kf7b7")
flip_h = true

[node name="Blocker" type="ColorRect" parent="Room"]
layout_mode = 0
offset_left = 147.0
offset_top = 115.0
offset_right = 262.0
offset_bottom = 227.0
scale = Vector2(1.12, 1.12)
color = Color(0.243137, 0.368627, 0.439216, 1)

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 180.25
offset_top = 20.0
offset_right = 289.25
offset_bottom = 102.0
scale = Vector2(1.12, 1.12)
texture = ExtResource("2_io5ma")

[node name="Play" type="AnimatedSprite2D" parent="."]
position = Vector2(240.25, 144)
scale = Vector2(1.12, 1.12)
sprite_frames = SubResource("SpriteFrames_8hckq")
frame_progress = 0.226111
speed_scale = 0.75

[node name="PlayButton" type="Button" parent="Play"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -18.0
offset_right = -53.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.12, 1.12)
theme_type_variation = &"FlatButton"

[node name="Exit" type="AnimatedSprite2D" parent="."]
position = Vector2(239, 201.5)
scale = Vector2(1.12, 1.12)
sprite_frames = SubResource("SpriteFrames_h383n")
frame_progress = 0.06906
speed_scale = 0.75

[node name="ExitButton" type="Button" parent="Exit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -41.9643
offset_top = -17.4107
offset_right = -51.9643
offset_bottom = -24.4107
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.12, 1.12)
theme_type_variation = &"FlatButton"

[node name="Pandora" type="Sprite2D" parent="."]
position = Vector2(129.5, 235.365)
scale = Vector2(3.875, 4.48312)
texture = ExtResource("5_j0ean")

[connection signal="mouse_entered" from="Play/PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="Play/PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="Play/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="Exit/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="Exit/ExitButton" to="." method="_on_exit_button_mouse_exited"]
[connection signal="pressed" from="Exit/ExitButton" to="." method="_on_exit_button_pressed"]
